--- a/rpa-certificates-of-free-sale/Data Workflows/Word/CreateAddressLabel.xaml
+++ b/rpa-certificates-of-free-sale/Data Workflows/Word/CreateAddressLabel.xaml
@@ -225,21 +225,21 @@
                   <av:PointCollection x:Key="ConnectorLocation">300,213.62 300,265.54</av:PointCollection>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <Sequence DisplayName="Copy file to Working Folder" sap:VirtualizedContainerService.HintSize="478,619" sap2010:WorkflowViewState.IdRef="Sequence_3">
+              <Sequence DisplayName="Copy file to Working Folder" sap:VirtualizedContainerService.HintSize="426,440" sap2010:WorkflowViewState.IdRef="Sequence_3">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
-                <Assign DisplayName="Assign Address label filepath" sap:VirtualizedContainerService.HintSize="436,60" sap2010:WorkflowViewState.IdRef="Assign_1">
+                <Assign DisplayName="Assign Address label filepath" sap:VirtualizedContainerService.HintSize="384,60" sap2010:WorkflowViewState.IdRef="Assign_1">
                   <Assign.To>
                     <OutArgument x:TypeArguments="x:String">[strAddressLabelPath]</OutArgument>
                   </Assign.To>
                   <Assign.Value>
-                    <InArgument x:TypeArguments="x:String">[IN_strWorkingFolderPath + IN_strReferenceNumber + " - " + (IN_intCertificateCounter + 1).ToString + ".doc"]</InArgument>
+                    <InArgument x:TypeArguments="x:String">[IN_strWorkingFolderPath + IN_strReferenceNumber + "-" + IN_intCertificateCounter.ToString + ".doc"]</InArgument>
                   </Assign.Value>
                 </Assign>
-                <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="436,230" sap2010:WorkflowViewState.IdRef="CommentOut_2">
+                <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="384,51" sap2010:WorkflowViewState.IdRef="CommentOut_2">
                   <ui:CommentOut.Body>
                     <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="304,152" sap2010:WorkflowViewState.IdRef="Sequence_6">
                       <sap:WorkflowViewStateService.ViewState>
@@ -257,8 +257,14 @@
                       </Assign>
                     </Sequence>
                   </ui:CommentOut.Body>
+                  <sap:WorkflowViewStateService.ViewState>
+                    <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                      <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                      <x:Boolean x:Key="IsPinned">False</x:Boolean>
+                    </scg:Dictionary>
+                  </sap:WorkflowViewStateService.ViewState>
                 </ui:CommentOut>
-                <ui:CopyFile ContinueOnError="{x:Null}" Destination="[strAddressLabelPath]" DisplayName="Copy File - to working folder" sap:VirtualizedContainerService.HintSize="436,157" sap2010:WorkflowViewState.IdRef="CopyFile_1" Overwrite="True" Path="[IN_dictConfig(&quot;AddressLabelPath&quot;)]">
+                <ui:CopyFile ContinueOnError="{x:Null}" Destination="[strAddressLabelPath]" DisplayName="Copy File - to working folder" sap:VirtualizedContainerService.HintSize="384,157" sap2010:WorkflowViewState.IdRef="CopyFile_1" Overwrite="True" Path="[IN_dictConfig(&quot;AddressLabelPath&quot;)]">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
