--- a/rpa-certificates-of-free-sale/Logic Workflows/FindCertificateTemplate.xaml
+++ b/rpa-certificates-of-free-sale/Logic Workflows/FindCertificateTemplate.xaml
@@ -6,7 +6,6 @@
     <x:Property Name="IN_strReferenceNumber" Type="InArgument(x:String)" />
     <x:Property Name="OUT_strCertificatePath" Type="OutArgument(x:String)" />
     <x:Property Name="IN_intCertificateCounter" Type="InArgument(x:Int32)" />
-    <x:Property Name="OUT_intCertificateCounter" Type="OutArgument(x:Int32)" />
     <x:Property Name="OUT_boolSpanCompleted" Type="OutArgument(x:Boolean)" />
     <x:Property Name="OUT_boolEngCompleted" Type="OutArgument(x:Boolean)" />
     <x:Property Name="IN_boolEngCompleted" Type="InArgument(x:Boolean)" />
@@ -149,7 +148,7 @@
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <av:Point x:Key="ShapeLocation">200,353.5</av:Point>
                   <av:Size x:Key="ShapeSize">200,51</av:Size>
-                  <av:PointCollection x:Key="ConnectorLocation">300,404.5 300,440</av:PointCollection>
+                  <av:PointCollection x:Key="ConnectorLocation">300,404.5 300,434.5 299,434.5 299,440</av:PointCollection>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
               <Flowchart DisplayName="Main Logic" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="Flowchart_2">
@@ -286,7 +285,7 @@
                                                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                               </scg:Dictionary>
                                             </sap:WorkflowViewStateService.ViewState>
-                                            <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="647,377" sap2010:WorkflowViewState.IdRef="CommentOut_1">
+                                            <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="569,51" sap2010:WorkflowViewState.IdRef="CommentOut_1">
                                               <ui:CommentOut.Body>
                                                 <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="611,299" sap2010:WorkflowViewState.IdRef="Sequence_7">
                                                   <sap:WorkflowViewStateService.ViewState>
@@ -325,12 +324,12 @@
                                               </ui:CommentOut.Body>
                                               <sap:WorkflowViewStateService.ViewState>
                                                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                                  <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                                                  <x:Boolean x:Key="IsExpanded">False</x:Boolean>
                                                   <x:Boolean x:Key="IsPinned">False</x:Boolean>
                                                 </scg:Dictionary>
                                               </sap:WorkflowViewStateService.ViewState>
                                             </ui:CommentOut>
-                                            <If Condition="[IN_intCertificateCounter = 0]" sap:VirtualizedContainerService.HintSize="647,208" sap2010:WorkflowViewState.IdRef="If_6">
+                                            <If Condition="[IN_intCertificateCounter = 0]" sap:VirtualizedContainerService.HintSize="569,208" sap2010:WorkflowViewState.IdRef="If_6">
                                               <If.Then>
                                                 <Assign DisplayName="Assign OUT_strCertificatePath" sap:VirtualizedContainerService.HintSize="262,60" sap2010:WorkflowViewState.IdRef="Assign_21">
                                                   <Assign.To>
@@ -347,19 +346,19 @@
                                                     <OutArgument x:TypeArguments="x:String">[OUT_strCertificatePath]</OutArgument>
                                                   </Assign.To>
                                                   <Assign.Value>
-                                                    <InArgument x:TypeArguments="x:String">[IN_strWorkingFolderPath + IN_strReferenceNumber + " - " + IN_intCertificateCounter.ToString + ".doc"]</InArgument>
+                                                    <InArgument x:TypeArguments="x:String">[IN_strWorkingFolderPath + IN_strReferenceNumber + "-" + IN_intCertificateCounter.ToString + ".doc"]</InArgument>
                                                   </Assign.Value>
                                                 </Assign>
                                               </If.Else>
                                             </If>
-                                            <ui:CopyFile ContinueOnError="{x:Null}" Destination="[OUT_strCertificatePath]" DisplayName="Copy Template" sap:VirtualizedContainerService.HintSize="647,157" sap2010:WorkflowViewState.IdRef="CopyFile_4" Overwrite="False" Path="[strCertificateTemplateFilePath + &quot;.doc&quot;]">
+                                            <ui:CopyFile ContinueOnError="{x:Null}" Destination="[OUT_strCertificatePath]" DisplayName="Copy Template" sap:VirtualizedContainerService.HintSize="569,157" sap2010:WorkflowViewState.IdRef="CopyFile_4" Overwrite="False" Path="[strCertificateTemplateFilePath + &quot;.doc&quot;]">
                                               <sap:WorkflowViewStateService.ViewState>
                                                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                                 </scg:Dictionary>
                                               </sap:WorkflowViewStateService.ViewState>
                                             </ui:CopyFile>
-                                            <Assign DisplayName="Assign OUT_strTemplatePath" sap:VirtualizedContainerService.HintSize="647,60" sap2010:WorkflowViewState.IdRef="Assign_25">
+                                            <Assign DisplayName="Assign OUT_strTemplatePath" sap:VirtualizedContainerService.HintSize="569,60" sap2010:WorkflowViewState.IdRef="Assign_25">
                                               <Assign.To>
                                                 <OutArgument x:TypeArguments="x:String">[OUT_strTemplatePath]</OutArgument>
                                               </Assign.To>
@@ -367,7 +366,7 @@
                                                 <InArgument x:TypeArguments="x:String">[strCertificateTemplateFilePath + ".doc"]</InArgument>
                                               </Assign.Value>
                                             </Assign>
-                                            <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="647,230" sap2010:WorkflowViewState.IdRef="CommentOut_3">
+                                            <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="569,230" sap2010:WorkflowViewState.IdRef="CommentOut_3">
                                               <ui:CommentOut.Body>
                                                 <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="304,152" sap2010:WorkflowViewState.IdRef="Sequence_11">
                                                   <sap:WorkflowViewStateService.ViewState>
@@ -386,7 +385,7 @@
                                                 </Sequence>
                                               </ui:CommentOut.Body>
                                             </ui:CommentOut>
-                                            <If Condition="[strCertificateTemplateFilePath.ToLower.Contains(&quot;spanish&quot;)]" DisplayName="If - mark language as completed" sap:VirtualizedContainerService.HintSize="647,208" sap2010:WorkflowViewState.IdRef="If_5">
+                                            <If Condition="[strCertificateTemplateFilePath.ToLower.Contains(&quot;spanish&quot;)]" DisplayName="If - mark language as completed" sap:VirtualizedContainerService.HintSize="569,208" sap2010:WorkflowViewState.IdRef="If_5">
                                               <If.Then>
                                                 <Assign sap:VirtualizedContainerService.HintSize="262,60" sap2010:WorkflowViewState.IdRef="Assign_18">
                                                   <Assign.To>
@@ -792,19 +791,25 @@
                 <FlowStep x:Name="__ReferenceID25">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                      <av:Point x:Key="ShapeLocation">169,440</av:Point>
-                      <av:Size x:Key="ShapeSize">262,60</av:Size>
-                      <av:PointCollection x:Key="ConnectorLocation">300,500 300,537</av:PointCollection>
+                      <av:Point x:Key="ShapeLocation">199,440</av:Point>
+                      <av:Size x:Key="ShapeSize">200,51</av:Size>
+                      <av:PointCollection x:Key="ConnectorLocation">299,491 299,521 300,521 300,537</av:PointCollection>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <Assign DisplayName="Assign OUT_intCertificateCounter" sap:VirtualizedContainerService.HintSize="262,60" sap2010:WorkflowViewState.IdRef="Assign_32">
-                    <Assign.To>
-                      <OutArgument x:TypeArguments="x:Int32">[OUT_intCertificateCounter]</OutArgument>
-                    </Assign.To>
-                    <Assign.Value>
-                      <InArgument x:TypeArguments="x:Int32">[IN_intCertificateCounter]</InArgument>
-                    </Assign.Value>
-                  </Assign>
+                  <ui:CommentOut sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="CommentOut_4">
+                    <ui:CommentOut.Body>
+                      <Sequence DisplayName="Ignored Activities" sap2010:WorkflowViewState.IdRef="Sequence_12">
+                        <Assign DisplayName="Assign OUT_intCertificateCounter" sap:VirtualizedContainerService.HintSize="262,60" sap2010:WorkflowViewState.IdRef="Assign_32">
+                          <Assign.To>
+                            <OutArgument x:TypeArguments="x:Int32">[OUT_intCertificateCounter]</OutArgument>
+                          </Assign.To>
+                          <Assign.Value>
+                            <InArgument x:TypeArguments="x:Int32">[IN_intCertificateCounter]</InArgument>
+                          </Assign.Value>
+                        </Assign>
+                      </Sequence>
+                    </ui:CommentOut.Body>
+                  </ui:CommentOut>
                   <FlowStep.Next>
                     <x:Reference>__ReferenceID22</x:Reference>
                   </FlowStep.Next>
